--- a/frontend/index.html
+++ b/frontend/index.html
@@ -25,7 +25,7 @@
                     <div class="job">
                         <h4 class="colornormal">I am an</h4>
                         <h4 class="colorintro">&nbsp;Android</h4>
-                        <h4 class="colornormal">&nbsp; &</h4>
+                        <h4 class="colornormal">&nbsp;-Kotlin &</h4>
                         <h4 class="colorintro">&nbsp; Backend Developer</h4>
                   </div>
                   <a href="contact.html">
